cluster/core/cilium/resources/hubble-httproute.yaml
---
# TODO: manually verify Hubble HTTPRoute works after migration
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: ingress
  hostnames:
    - "hubble.${S_HOMEPROD_DOMAIN}"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
